# todoapp

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.base.json
backend/: .env.example  AGENTS.md  TODO.md  package.json  pyproject.toml  pyrefly.toml  tsconfig.json  vitest.config.ts
backend/app/: config.py  database.py  exceptions.py  handlers.py  main.py
backend/app/dependencies/: auth.py  container.py
backend/app/models/: __init__.py  todo.py  user.py
backend/app/repositories/: todo.py  user.py
backend/app/routers/: auth.py  todo.py
backend/app/schemas/: errors.py  todo.py  user.py
backend/docs/: ARCHITECTURE.md  recurring-task-migration.md  task-progress-migration.md
backend/prisma/: schema.prisma
backend/scripts/: migrate_recurring_task_schema.py  migrate_subtask_schema.py  migrate_task_progress_schema.py
backend/src/: app.ts  server.ts
backend/tests/: architecture-domain-boundary.test.ts  auth-api-behavior.test.ts  auth-routes-error.test.ts  auth-service.test.ts  auth.test.ts  conftest.py  health.test.ts  prisma-client.test.ts  prisma-harness.test.ts  prisma-testing.test.ts  test_auth.py  test_subtask_schema_migration.py  test_todo.py  test_todo_completion.py  test_todo_deadline.py  test_todo_progress_status.py  test_todo_recurrence.py  test_todo_subtask_create.py  test_todo_subtask_delete.py  test_todo_subtask_progress.py  test_todo_subtask_recurrence_rules.py  todo-http-error.test.ts  todo-read-api.test.ts  todo-schemas.test.ts  todo-update-api.test.ts  todo-write-basic-api.test.ts  todo.test.ts
(+152 files in other folders)
